source/Cb_go/cflatParser.py
# Generated from cflat.g4 by ANTLR 4.5.3
# encoding: utf-8
from antlr4 import *
from io import StringIO



class cflatParser ( Parser ):

    grammarFileName = "cflat.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'do'", "'++'", "'--'", "'%'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'case'", "'break'", 
                     "'continue'", "'default'", "'for'", "'while'", "'if'", 
                     "'else'", "'return'", "'switch'", "<INVALID>", "'int'", 
                     "'float'", "'string'", "'boolean'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'+'", "'-'", "'*'", "'/'", "'&'", "'&&'", 
                     "'|'", "'||'", "'^'", "'!'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'<<'", "'>>'", "'='", "'.'", 
                     "':'", "';'", "','", "'('", "')'", "'['", "']'", "'{'", 
                     "'}'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "Initialisation", "Assignment", "Declaration", 
                      "Value", "Calculator", "Calculator_pmad", "Calculator_bit", 
                      "Calculator_logic", "Valiable", "Val_int", "Val_float", 
                      "Val_string", "Val_boolean", "Val_void", "Digit", 
                      "Nondigit", "Case", "Break", "Continue", "Default", 
                      "For", "While", "If", "Else", "RETURN", "Switch", 
                      "Type", "Int", "Float", "String", "Boolean", "Void", 
                      "TRUE", "FALSE", "Plus", "Minus", "Asterisk", "Div", 
                      "And", "Andand", "Or", "Oror", "Caret", "Not", "Equal", 
                      "Notequal", "Less", "Lessequal", "Greater", "Greaterequal", 
                      "Leftshift", "Rightshift", "Assign", "Dot", "Colon", 
                      "Semi", "Coma", "Leftparen", "Rightparen", "Leftbracket", 
                      "Rightbracket", "Leftbrace", "Rightbrace", "Whitespace", 
                      "Newline", "Block_comment", "Line_comment" ]

    RULE_run = 0
    RULE_frame = 1
    RULE_iterationStatement = 2
    RULE_brace_group = 3
    RULE_line = 4
    RULE_action_end = 5
    RULE_actions = 6
    RULE_action = 7
    RULE_increase = 8
    RULE_decrease = 9
    RULE_percent = 10

    ruleNames =  [ "run", "frame", "iterationStatement", "brace_group", 
                   "line", "action_end", "actions", "action", "increase", 
                   "decrease", "percent" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    Initialisation=5
    Assignment=6
    Declaration=7
    Value=8
    Calculator=9
    Calculator_pmad=10
    Calculator_bit=11
    Calculator_logic=12
    Valiable=13
    Val_int=14
    Val_float=15
    Val_string=16
    Val_boolean=17
    Val_void=18
    Digit=19
    Nondigit=20
    Case=21
    Break=22
    Continue=23
    Default=24
    For=25
    While=26
    If=27
    Else=28
    RETURN=29
    Switch=30
    Type=31
    Int=32
    Float=33
    String=34
    Boolean=35
    Void=36
    TRUE=37
    FALSE=38
    Plus=39
    Minus=40
    Asterisk=41
    Div=42
    And=43
    Andand=44
    Or=45
    Oror=46
    Caret=47
    Not=48
    Equal=49
    Notequal=50
    Less=51
    Lessequal=52
    Greater=53
    Greaterequal=54
    Leftshift=55
    Rightshift=56
    Assign=57
    Dot=58
    Colon=59
    Semi=60
    Coma=61
    Leftparen=62
    Rightparen=63
    Leftbracket=64
    Rightbracket=65
    Leftbrace=66
    Rightbrace=67
    Whitespace=68
    Newline=69
    Block_comment=70
    Line_comment=71

    def __init__(self, input:TokenStream):
        super().__init__(input)
        self.checkVersion("4.5.3")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RunContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def frame(self):
            return self.getTypedRuleContext(cflatParser.FrameContext,0)


        def EOF(self):
            return self.getToken(cflatParser.EOF, 0)

        def getRuleIndex(self):
            return cflatParser.RULE_run

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRun" ):
                listener.enterRun(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRun" ):
                listener.exitRun(self)




    def run(self):

        localctx = cflatParser.RunContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_run)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.frame()
            self.state = 23
            self.match(cflatParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FrameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.LineContext)
            else:
                return self.getTypedRuleContext(cflatParser.LineContext,i)


        def brace_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.Brace_groupContext)
            else:
                return self.getTypedRuleContext(cflatParser.Brace_groupContext,i)


        def getRuleIndex(self):
            return cflatParser.RULE_frame

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrame" ):
                listener.enterFrame(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrame" ):
                listener.exitFrame(self)




    def frame(self):

        localctx = cflatParser.FrameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_frame)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 27
                token = self._input.LA(1)
                if token in [cflatParser.Initialisation, cflatParser.Assignment, cflatParser.Declaration, cflatParser.Value, cflatParser.Calculator]:
                    self.state = 25
                    self.line()

                elif token in [cflatParser.Leftbrace]:
                    self.state = 26
                    self.brace_group()

                else:
                    raise NoViableAltException(self)

                self.state = 29 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (cflatParser.Initialisation - 5)) | (1 << (cflatParser.Assignment - 5)) | (1 << (cflatParser.Declaration - 5)) | (1 << (cflatParser.Value - 5)) | (1 << (cflatParser.Calculator - 5)) | (1 << (cflatParser.Leftbrace - 5)))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IterationStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Calculator_logic(self, i:int=None):
            if i is None:
                return self.getTokens(cflatParser.Calculator_logic)
            else:
                return self.getToken(cflatParser.Calculator_logic, i)

        def brace_group(self):
            return self.getTypedRuleContext(cflatParser.Brace_groupContext,0)


        def Assignment(self, i:int=None):
            if i is None:
                return self.getTokens(cflatParser.Assignment)
            else:
                return self.getToken(cflatParser.Assignment, i)

        def getRuleIndex(self):
            return cflatParser.RULE_iterationStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIterationStatement" ):
                listener.enterIterationStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIterationStatement" ):
                listener.exitIterationStatement(self)




    def iterationStatement(self):

        localctx = cflatParser.IterationStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_iterationStatement)
        self._la = 0 # Token type
        try:
            self.state = 59
            token = self._input.LA(1)
            if token in [cflatParser.While]:
                self.enterOuterAlt(localctx, 1)
                self.state = 31
                self.match(cflatParser.While)
                self.state = 32
                self.match(cflatParser.Leftparen)
                self.state = 33
                self.match(cflatParser.Calculator_logic)
                self.state = 34
                self.match(cflatParser.Rightparen)
                self.state = 35
                self.brace_group()

            elif token in [cflatParser.T__0]:
                self.enterOuterAlt(localctx, 2)
                self.state = 36
                self.match(cflatParser.T__0)
                self.state = 37
                self.brace_group()
                self.state = 38
                self.match(cflatParser.While)
                self.state = 39
                self.match(cflatParser.Leftparen)
                self.state = 40
                self.match(cflatParser.Calculator_logic)
                self.state = 41
                self.match(cflatParser.Rightparen)
                self.state = 42
                self.match(cflatParser.Semi)

            elif token in [cflatParser.For]:
                self.enterOuterAlt(localctx, 3)
                self.state = 44
                self.match(cflatParser.For)
                self.state = 45
                self.match(cflatParser.Leftparen)
                self.state = 47
                _la = self._input.LA(1)
                if _la==cflatParser.Assignment or _la==cflatParser.Calculator_logic:
                    self.state = 46
                    _la = self._input.LA(1)
                    if not(_la==cflatParser.Assignment or _la==cflatParser.Calculator_logic):
                        self._errHandler.recoverInline(self)
                    else:
                        self.consume()


                self.state = 49
                self.match(cflatParser.Semi)
                self.state = 51
                _la = self._input.LA(1)
                if _la==cflatParser.Calculator_logic:
                    self.state = 50
                    self.match(cflatParser.Calculator_logic)


                self.state = 53
                self.match(cflatParser.Semi)
                self.state = 55
                _la = self._input.LA(1)
                if _la==cflatParser.Assignment or _la==cflatParser.Calculator_logic:
                    self.state = 54
                    _la = self._input.LA(1)
                    if not(_la==cflatParser.Assignment or _la==cflatParser.Calculator_logic):
                        self._errHandler.recoverInline(self)
                    else:
                        self.consume()


                self.state = 57
                self.match(cflatParser.Rightparen)
                self.state = 58
                self.brace_group()

            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Brace_groupContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Leftbrace(self):
            return self.getToken(cflatParser.Leftbrace, 0)

        def Rightbrace(self):
            return self.getToken(cflatParser.Rightbrace, 0)

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.LineContext)
            else:
                return self.getTypedRuleContext(cflatParser.LineContext,i)


        def brace_group(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.Brace_groupContext)
            else:
                return self.getTypedRuleContext(cflatParser.Brace_groupContext,i)


        def getRuleIndex(self):
            return cflatParser.RULE_brace_group

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBrace_group" ):
                listener.enterBrace_group(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBrace_group" ):
                listener.exitBrace_group(self)




    def brace_group(self):

        localctx = cflatParser.Brace_groupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_brace_group)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(cflatParser.Leftbrace)
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((((_la - 5)) & ~0x3f) == 0 and ((1 << (_la - 5)) & ((1 << (cflatParser.Initialisation - 5)) | (1 << (cflatParser.Assignment - 5)) | (1 << (cflatParser.Declaration - 5)) | (1 << (cflatParser.Value - 5)) | (1 << (cflatParser.Calculator - 5)) | (1 << (cflatParser.Leftbrace - 5)))) != 0):
                self.state = 64
                token = self._input.LA(1)
                if token in [cflatParser.Initialisation, cflatParser.Assignment, cflatParser.Declaration, cflatParser.Value, cflatParser.Calculator]:
                    self.state = 62
                    self.line()

                elif token in [cflatParser.Leftbrace]:
                    self.state = 63
                    self.brace_group()

                else:
                    raise NoViableAltException(self)

                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 69
            self.match(cflatParser.Rightbrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class LineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action_end(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.Action_endContext)
            else:
                return self.getTypedRuleContext(cflatParser.Action_endContext,i)


        def Newline(self):
            return self.getToken(cflatParser.Newline, 0)

        def getRuleIndex(self):
            return cflatParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)




    def line(self):

        localctx = cflatParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_line)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self.action_end()

                else:
                    raise NoViableAltException(self)
                self.state = 74 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 77
            _la = self._input.LA(1)
            if _la==cflatParser.Newline:
                self.state = 76
                self.match(cflatParser.Newline)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Action_endContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actions(self):
            return self.getTypedRuleContext(cflatParser.ActionsContext,0)


        def Semi(self):
            return self.getToken(cflatParser.Semi, 0)

        def getRuleIndex(self):
            return cflatParser.RULE_action_end

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction_end" ):
                listener.enterAction_end(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction_end" ):
                listener.exitAction_end(self)




    def action_end(self):

        localctx = cflatParser.Action_endContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_action_end)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.actions()
            self.state = 80
            self.match(cflatParser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(cflatParser.ActionContext)
            else:
                return self.getTypedRuleContext(cflatParser.ActionContext,i)


        def Coma(self, i:int=None):
            if i is None:
                return self.getTokens(cflatParser.Coma)
            else:
                return self.getToken(cflatParser.Coma, i)

        def getRuleIndex(self):
            return cflatParser.RULE_actions

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActions" ):
                listener.enterActions(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActions" ):
                listener.exitActions(self)




    def actions(self):

        localctx = cflatParser.ActionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_actions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.action()
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==cflatParser.Coma:
                self.state = 83
                self.match(cflatParser.Coma)
                self.state = 84
                self.action()
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ActionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Initialisation(self):
            return self.getToken(cflatParser.Initialisation, 0)

        def Assignment(self):
            return self.getToken(cflatParser.Assignment, 0)

        def Declaration(self):
            return self.getToken(cflatParser.Declaration, 0)

        def Value(self):
            return self.getToken(cflatParser.Value, 0)

        def Calculator(self):
            return self.getToken(cflatParser.Calculator, 0)

        def getRuleIndex(self):
            return cflatParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)




    def action(self):

        localctx = cflatParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << cflatParser.Initialisation) | (1 << cflatParser.Assignment) | (1 << cflatParser.Declaration) | (1 << cflatParser.Value) | (1 << cflatParser.Calculator))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncreaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cflatParser.RULE_increase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncrease" ):
                listener.enterIncrease(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncrease" ):
                listener.exitIncrease(self)




    def increase(self):

        localctx = cflatParser.IncreaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_increase)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(cflatParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecreaseContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cflatParser.RULE_decrease

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecrease" ):
                listener.enterDecrease(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecrease" ):
                listener.exitDecrease(self)




    def decrease(self):

        localctx = cflatParser.DecreaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_decrease)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(cflatParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PercentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return cflatParser.RULE_percent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPercent" ):
                listener.enterPercent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPercent" ):
                listener.exitPercent(self)




    def percent(self):

        localctx = cflatParser.PercentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_percent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(cflatParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





